增加按数据库生成代码

--- a/src/com.easycode.gencode/src/com/easycode/resource/lang.properties
+++ b/src/com.easycode.gencode/src/com/easycode/resource/lang.properties
@@ -46,7 +46,7 @@ code.044=\u6570\u636e\u5e93\u7c7b\u522b
 code.045=\u6570\u636e\u5e93\u5de5\u5177
 code.046=\u914d\u7f6e\u540d
 code.047=\u6d4b\u8bd5
-code.048=POJO\u7c7b\u751f\u6210
+code.048=\u4EE3\u7801\u751F\u6210
 code.049=\u914d\u7f6e
 code.050=\u8868\u540d
 code.051=\u67e5\u8be2
