--- a/src/com.easycode.gencode/plugin.xml
+++ b/src/com.easycode.gencode/plugin.xml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+  <extension
+       id="pop.commoand1"
+       point="org.eclipse.ui.commands">  
+   <!--
+   <command  
+         description="multlanguage"  
+         id="client.action.ReviewActionBind"  
+         name="Generator">  
+   </command>
+   -->
+   
+   
+   <category
+         id="com.easycode.gencode.commands.category"
+         name="Sample Category">
+   </category>
+   <command
+         categoryId="com.easycode.gencode.commands.category"
+         id="com.easycode.gencode.commands.sampleCommand"
+         name="数据库工具">
+   </command>  
+   <command
+         categoryId="com.easycode.gencode.commands.category"
+         id="com.easycode.gencode.handlers.CodeGenHandler"
+         name="Gen Tool">
+   </command>  
+   
+</extension>  
  
+ <!--
  <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
@@ -19,18 +48,67 @@
                toolbarPath="sampleGroup"
                id="client.action.ReviewAction">
          </action>
-       
-         
-         
+        
       </actionSet>
    </extension>
-   
+     -->
 
+ <extension
+        point="org.eclipse.ui.menus">
+     <menuContribution
+           locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+        <toolbar
+              id="com.easycode.gencode.handlers.CodeGen.toolbar"
+              label="JEC"
+              mnemonic="M">
+           <command
+                 commandId="com.easycode.gencode.handlers.CodeGenHandler"
+                 id="com.easycode.gencode.handlers.CodeGenHandler"
+                 icon="icons/sample.png"
+                 mnemonic="S">
+           </command>
+         
+        </toolbar>
+     </menuContribution>
 
+  </extension>
+  
+  
+  
+    <extension
+        point="org.eclipse.ui.menus">
+     <menuContribution
+           locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+        <menu
+              id="com.easycode.gencode.menus.sampleMenu"
+              label="JEC 工具"
+              mnemonic="M">
+           <command
+                 commandId="com.easycode.gencode.commands.sampleCommand"
+                 id="com.easycode.gencode.menus.sampleCommand"
+                 icon="icons/sample.png"
+                 mnemonic="S">
+           </command>
+           <!--
+           <command
+                 commandId="com.easycode.gencode.handlers.CodeGenHandler"
+                 id="com.easycode.gencode.menus.sampleCommand2"
+                 icon="icons/sample.png"
+                 mnemonic="S">
+           </command>
+           -->
+        </menu>
+     </menuContribution>
 
-
-
-
+  </extension>
+  
+  
+  
+  
+  
+  
+  
+  
       <extension
          point="org.eclipse.ui.editors">
       <editor
@@ -43,20 +121,16 @@
             id="client.editors.gencode.cfg.GenJavaCodeEditor">
       </editor>
    </extension>
- <extension point="org.eclipse.ui.commands">  
-   <command  
-         description="multlanguage"  
-         id="client.action.ReviewActionBind"  
-         name="Add Mutilang">  
-   </command>  
-</extension>  
-    
-         <extension
+   
+
+
+
+ <extension
          point="org.eclipse.ui.editors">
       <editor
-            name="Easy Code 配置"
+            name="Database Tool"
             extensions="xml"
-            nameFilter="GenInitConfig.xml"
+            nameFilter="config.xml"
             icon="icons/sample.png"
           
             contributorClass="com.easycode.configmgr.configeditor.ConfigCodeEditorContributor"
@@ -84,7 +158,15 @@
            commandId="client.editors.gencode.jsp.mulkj"  
            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"  
            sequence="Alt+Q">  
-      </key>  
+      </key>
+      <!--
+     <key
+           commandId="com.easycode.gencode.commands.sampleCommand"
+           contextId="org.eclipse.ui.contexts.window"
+           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+           sequence="M1+6">
+     </key>  
+     -->
   </extension>  
   
   <extension point="org.eclipse.ui.commands">  
@@ -94,7 +176,6 @@
          name="Add Mutilang">  
    </command>  
 </extension>  
-  
   
  <extension point="org.eclipse.ui.actionSets">  
       <actionSet  
@@ -124,14 +205,72 @@
                icon="icons/sample.png"
                id="PopMenu.newAction">
        </action>
-         
-         
-         
-         
-         
+          
          
        </objectContribution>
    </extension>
    
+      <extension
+         point="org.eclipse.ui.popupMenus">
+      <objectContribution
+            objectClass="java.lang.Object"
+            nameFilter="*.json"
+            id="PopMenu.contribution2">
+       <action
+               label="Easy Code"
+               class="com.easycode.gencode.action.PopReviewAction"
+               menubarPath="group1"
+              enablesFor="1"
+               icon="icons/sample.png"
+               id="PopMenu.newAction">
+       </action>
+          
+         
+       </objectContribution>
+   </extension>
+ 
+ <!--
+  <extension point="org.eclipse.ui.popupMenus">
+  
+      <objectContribution 
+        objectClass="org.eclipse.core.resources.IProject"
+            id="com.easycode.gencode.action.InitPrjectAction"
+            >
+ 
+         <action
+               enablesFor="1"
+               label="Database Tool"
+               icon="icons/sample.png"
+               class="com.easycode.gencode.action.InitPrjectAction"
+               id="Database_Tool"
+                >
 
+         </action>
+         
+      </objectContribution>
+    </extension>
+    -->
+    
+  <extension
+        point="org.eclipse.ui.handlers">
+     <handler
+           class="com.easycode.gencode.handlers.DatabaseToolHandler"
+           commandId="com.easycode.gencode.commands.sampleCommand">
+     </handler>
+     <handler
+           class="com.easycode.gencode.handlers.CodeGenHandler"
+           commandId="com.easycode.gencode.handlers.CodeGenHandler">
+     </handler>
+     
+     
+  </extension>
+ 
+
+   
+   
+    
+   
+   
+   
+ 
 </plugin>
