--- a/src/com.easycode.gencode/build.properties
+++ b/src/com.easycode.gencode/build.properties
@@ -1,6 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
+bin.includes = plugin.xmlold,\
                META-INF/,\
                .,\
                icons/,\
@@ -8,5 +8,6 @@ bin.includes = plugin.xml,\
                lib/jdom-1.1.3.jar,\
                lib/httpclient-4.1.2.jar,\
                lib/httpcore-4.1.2.jar,\
-               lib/httpmime-4.1.2.jar
+               lib/httpmime-4.1.2.jar,\
+               plugin.xml
 javacDefaultEncoding.. = UTF-8
