--- a/src/com.easycode.gencode/build.properties
+++ b/src/com.easycode.gencode/build.properties
@@ -9,5 +9,6 @@ bin.includes = plugin.xmlold,\
                lib/httpclient-4.1.2.jar,\
                lib/httpcore-4.1.2.jar,\
                lib/httpmime-4.1.2.jar,\
-               plugin.xml
+               plugin.xml,\
+               lib/mysql-connector-java-8.0.11.jar
 javacDefaultEncoding.. = UTF-8
