--- a/src/com.easycode.gencode/src/com/easycode/resource/lang.properties
+++ b/src/com.easycode.gencode/src/com/easycode/resource/lang.properties
@@ -88,4 +88,5 @@ code.086=\u8BF7\u5728\u3010CodeGen\u3011\u6807\u7B7E\u9875\u4E2D\u9009\u4E2D\u4E
 code.087=\u6ce8\u91ca
 code.088=\u65b0\u589e
 code.089=\u5168\u9009
+res.drivers=,com.mysql.jdbc.Driver,oracle.jdbc.driver.OracleDriver,com.mysql.cj.jdbc.Driver
 code.100=http://www.jeasycode.org/easycode/codemgr
