--- a/src/com.easycode.gencode/build.properties
+++ b/src/com.easycode.gencode/build.properties
@@ -10,5 +10,6 @@ bin.includes = plugin.xmlold,\
                lib/httpcore-4.1.2.jar,\
                lib/httpmime-4.1.2.jar,\
                plugin.xml,\
-               lib/mysql-connector-java-8.0.11.jar
+               lib/mysql-connector-java-8.0.11.jar,\
+               lib/freemarker.jar
 javacDefaultEncoding.. = UTF-8
