--- a/src/com.easycode.gencode/.classpath
+++ b/src/com.easycode.gencode/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/freemarker.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-8.0.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.1.2.jar"/>
@@ -16,7 +18,6 @@
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/draw2d_3.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/ezmorph-1.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/freemarker-2.3.12.jar"/>
 	<classpathentry kind="lib" path="lib/jabsorb-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="lib" path="lib/jsr173_1.0_api.jar"/>
